Fix cropped logos in manager pg, fix layout in app-info pg, changed color to app names in home pg

--- a/src/app/components/header-bar/header-bar.component.scss
+++ b/src/app/components/header-bar/header-bar.component.scss
@@ -5,4 +5,5 @@ ion-title {
     width: 100%;
     height: 100%;
     text-align: center !important;
+    z-index: 2;
 }
