--- a/src/app/pages/manager/manager.page.scss
+++ b/src/app/pages/manager/manager.page.scss
@@ -2,17 +2,18 @@
 @import "../../functions.scss";
 
 ion-list {
-    margin-top: px2rem(180px);
+    margin-top: px2rem(108px);
 }
 
 ion-item {
-    margin-bottom: px2rem(50px);
+    // margin-bottom: px2rem(50px);
     height: px2rem(112px);
 }
 
 ion-thumbnail {
     width: px2rem(112px);
     height: px2rem(112px);
+    padding: 8px;
     img {
         border-radius: 6px;
     }
